Step 3 completed and refactoring of class names. Step 3 consists of the creation of interactions in menu, with buttons that link to third party pages.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="teaser">Vous êtes appelez sur une enquête pour élucider un meurtre. Soyez vigilant !</string>
     <string name="new_game">Nouvelle partie</string>
     <string name="continue_game">Partie sauvegardée</string>
-    <string name="quit_game">Quitter le jeu</string>
+
+    <string name="inside_hall_room">Vous êtes dans le Hall.</string>
 
 
 </resources>
