add interactions of the first rooms of the game, use of fragments for rooms.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,8 @@
     <string name="to_living_room">Vers le salon</string>
     <string name="to_library_room">Vers la bibliothèque</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
